Refactored revisionParser